make links more accessible

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,6 @@ label {
 .pageLink {
   margin-top: 0px;
   background-color: black;
-  color: dimgrey;
+  color: chartreuse;
   font-size: 0.25em !important;
 }
